[package]
name = "rs-jmap2pmap"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.serde_json]
version = "1.0"
default-features = false
features = [
	"std",
]

[dependencies.prost]
version = "0.13"
default-features = false
features = [
	"derive",
	"std",
]

[dependencies.prost-types]
version = "0.13"
default-features = false
features = [
	"std",
]
